cluster/gitops/security/authentik/backend/redis/netpols.yaml
---
# TODO allow metrics to connect to this port
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-dragonfly-admin-port
spec:
  podSelector:
    matchLabels:
      app: authentik-dragonfly
  ingress:
    # Communication between instances
    - from:
        - podSelector:
            matchLabels:
              app: authentik-dragonfly
      ports:
        - protocol: TCP
          port: 9999
    # Communication with operator
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: dragonfly-operator
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data
      ports:
        - protocol: TCP
          port: 9999
    # Communication from vmagent (monitoring)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - protocol: TCP
          port: 9999
  egress:
    # Communication between instances
    - to:
        - podSelector:
            matchLabels:
              app: authentik-dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
# TODO allow metrics to connect to this port
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-dragonfly-application-port
spec:
  podSelector:
    matchLabels:
      app: authentik-dragonfly
  ingress:
    # Communication with application
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: authentik
      ports:
        - protocol: TCP
          port: 6379
    # Communication with Teleport agent
    - from:
        - podSelector:
            matchLabels:
              app: teleport-agent
      ports:
        - protocol: TCP
          port: 6379
